--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -1,6 +1,27 @@
 ---
 
-- name: Enable access in firewalld
+- name: Enable gossip tcp in firewalld
+  when consul_node_role is defined
+  firewalld:
+    port: '{{ item }}/tcp'
+    permanent: true
+    state: enabled
+    immediate: true
+  with_items:
+    - 8301
+
+- name: Enable gossip udp in firewalld
+  when consul_node_role is defined
+  firewalld:
+    port: '{{ item }}/udp'
+    permanent: true
+    state: enabled
+    immediate: true
+  with_items:
+    - 8301
+
+- name: Enable server access in firewalld
+  when consul_node_role is defined and consul_node_role == 'server'
   firewalld:
     port: '{{ item }}/tcp'
     permanent: true
@@ -8,21 +29,18 @@
     immediate: true
   with_items:
     - 8300
-    - 8301
     - 8302
-    - 8500
     - 8501
     - 8502
-    - 8600
 
-- name: Enable udp in firewalld
+- name: Enable server udp in firewalld
+  when consul_node_role is defined and consul_node_role == 'server'
   firewalld:
-    port: '{{ item }}/tcp'
+    port: '{{ item }}/udp'
     permanent: true
     state: enabled
     immediate: true
   with_items:
-    - 8301
     - 8302
     - 8502
     - 8600
@@ -32,7 +50,7 @@
       delegate_to: "{{ groups.consul_servers[0] }}"
       shell: "cat {{ consul_config_path }}/config.json"
       register: config_read
-      no_log: true
+      no_log: false
       run_once: true
       changed_when: false
 
@@ -43,7 +61,7 @@
         consul_acl_master_token: "{{ config_read.stdout | from_json | json_query(query) }}"
       vars:
         query: "acl.tokens.master"
-      no_log: true
+      no_log: false
   tags:
     - policies
     - tokens
